--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,45 @@
 @import "tailwindcss";
 
+@font-face {
+  font-family: "font-lexia-readable";
+  src: url(../fonts/lexia_readable/LexieReadable-Bold.ttf) format(truetype);
+  font-display: swap;
+}
+
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #FFFCFE;
+  --foreground: #282426;
 }
 
 @theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  --color-white-100: #FFFCFE;
+  --color-white-200: #FFFAFD;
+  --color-white-300: #FFF0F8;
+  --color-black: #11000A;
+  --color-gray: #282426;
+  --color-dark-purple: #5E239D;
+  --color-light-purple: #863DD4;
+  --color-dark-pink-100: #FB3CA5;
+  --color-dark-pink-200: #F20587;
+  --color-light-pink-100: #FFD1E9;
+  --color-light-pink-200: #FFC2E2;
+  --font-poppins: var(--font-poppins);
+  --text-32px: 32px;
+  --text-28px: 28px;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: #282426;
+    --foreground: #FFFCFE;
   }
-}
+} */
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  color: var(--color-white-100);
+  font-family: var(--font-poppins);
+}
+
+.font-title {
+  font-family: "font-lexia-readable", sans-serif;
 }
