feat: footer home page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -43,6 +43,7 @@
   --spacing-70px: 70px;
   --spacing-16: 60px;
   --spacing-12: 50px;
+  --spacing-8: 30px;
 }
 
 /* @media (prefers-color-scheme: dark) {
