--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -90,7 +90,7 @@ body {
 }
 
 .notify-toastify {
-  @apply min-w-[300px] bg-[#00B09B] text-base rounded-4xl xl:w-max xl:text-xl;
+  @apply min-w-[290px] bg-[#00B09B] text-base rounded-4xl xl:w-max xl:text-xl xl:translate-x-full;
 }
 
 /* Animation */
