--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,17 +1,17 @@
 @import "tailwindcss";
 
 @font-face {
-  font-family: "font-lexia-readable";
+  font-family: "lexia-readable";
   src: url(../fonts/home-page/lexia_readable/LexieReadable-Bold.ttf) format(truetype);
   font-display: swap;
 }
 @font-face {
-  font-family: "font-open-dyslexic-regular";
+  font-family: "open-dyslexic";
   src: url(../fonts/home-page/open_dyslexic/OpenDyslexicAlta-Regular.otf) format(opentype);
   font-display: swap;
 }
 @font-face {
-  font-family: "font-open-dyslexic-bold";
+  font-family: "open-dyslexic-bold";
   src: url(../fonts/home-page/open_dyslexic/OpenDyslexicAlta-Bold.otf) format(opentype);
   font-display: swap;
 }
@@ -38,7 +38,11 @@
   --color-dark-pink-200: #F20587;
   --color-light-pink-100: #FFD1E9;
   --color-light-pink-200: #FFC2E2;
+  --font-lexia-readable: "lexia-readable";
+  --font-open-dyslexic: "open-dyslexic";
   --font-poppins: var(--font-poppins);
+  --font-geometos-rounded: "geometos-rounded";
+  --font-bitter: "bitter";
   --text-44px: 44px;
   --text-32px: 32px;
   --text-28px: 28px;
@@ -68,15 +72,9 @@ body {
   @apply bg-light-pink-100 font-poppins text-white-100 animate-[fade_0.5s_ease-in-out];
 }
 
-/* Text fonts */
-.font-title {
-  font-family: "font-lexia-readable", sans-serif;
-}
-.font-text {
-  font-family: "font-open-dyslexic-regular", sans-serif;
-}
-.font-text strong {
-  font-family: "font-open-dyslexic-bold", sans-serif;
+/* Texts */
+.font-open-dyslexic strong {
+  font-family: "open-dyslexic-bold", sans-serif;
   background: linear-gradient(
     96deg,
     var(--color-light-pink-200) 0%,
@@ -87,13 +85,8 @@ body {
   -webkit-text-fill-color: transparent;
   text-shadow: 4px 4px 4px #2824260D, 4px 4px 4px #FFD1E908;
 }
-.font-title-cnbpb {
-  font-family: "geometos-rounded", sans-serif;
-}
-.font-title-janai-amitaf {
-  font-family: "bitter", sans-serif;
-}
 
+/* Form's toach */
 .notify-toastify {
   @apply min-w-[290px] bg-[#00B09B] text-base rounded-4xl xl:w-max xl:text-xl xl:translate-x-full;
 }
