docs: update text fonts section

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -42,6 +42,7 @@
   --font-open-dyslexic: "open-dyslexic";
   --font-poppins: var(--font-poppins);
   --font-geometos-rounded: "geometos-rounded";
+  --font-open-sans: sans-serif;
   --font-bitter: "bitter";
   --text-44px: 44px;
   --text-32px: 32px;
