--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -92,6 +92,13 @@ body {
   @apply min-w-[290px] bg-[#00B09B] text-base rounded-4xl xl:w-max xl:text-xl xl:translate-x-full;
 }
 
+/* Academic backgrounds list */
+@media screen and (max-width: 1280px) {
+  #formacoes ul li:last-of-type hr:last-child {
+    @apply hidden;
+  }
+}
+
 /* Animation */
 @keyframes fade {
   from {
