--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -128,7 +128,8 @@ body {
   );
   background-clip: text;
 }
-#solution-cnbpb .font-open-dyslexic strong {
+#solution-cnbpb .font-open-dyslexic strong,
+#style-guide-cnbpb .font-open-dyslexic strong {
   background: linear-gradient(
     96deg,
     #713CA6 0%,
