feat: add footer to cnbpb project

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -120,7 +120,8 @@ body {
   -webkit-text-fill-color: transparent;
   text-shadow: 4px 4px 4px #2824260D, 4px 4px 4px #FFD1E908;
 }
-#problemn-cnbpb .font-open-dyslexic strong {
+#problemn-cnbpb .font-open-dyslexic strong,
+#footer-cnbpb .font-open-dyslexic strong {
   background: linear-gradient(
     96deg,
     #F2E530 0%,
